[package]
name = "sabi"
version = "0.1.0"
authors = ["robin <beemo@openmailbox.org>"]
license = "GPL-3.0-only"
description = "A rust like language with a stack based vm, alternative name: sabimatai"
edition = "2018"

[dependencies]
regex = "1.0.5"
lazy_static = "1.1.0"
byteorder = "1"
combine = "3.6"
combine-language = "3.0"
clap = "2.32"
ordered-float = "1.0"