[package]
name = "sabishi"
description = "A rust like language with a stack based vm, alternative name: sabimatai"
version = "0.1.0"
authors = ["Robin van Dijk <robin.van.dijk@target-holding.nl>"]
edition = "2018"
license = "GPL-3.0-only"

[lib]
name = "sabi"
path = "src/lib.rs"

[[bin]]
name = "sabi"
path = "src/main.rs"

[dependencies]
vm = {path = "../vm"}

lazy_static = "1.1.0"
byteorder = "1"
ordered-float = "1.0"

structopt = "0.2"
codespan = "0.2"
codespan-reporting = "0.2"
termcolor = "*"
lalrpop-util = "0.16.3"
regex = "0.2.0"

[dev-dependencies]
criterion = "0.2"

[build-dependencies]
lalrpop = "0.16.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
panic = 'abort'
